# Virtual-Angiogenesis

./: .gitignore  README.md
DVC/: Create-ICP-DCP.ipynb
ForestCCO/: Makefile  macula.cc
ForestCCO/Geometry/: macula.py
Post-Processing/: utils.py
Post-Processing/Creating-Arterio-Venous-Trees/: 5-Seg.cco  Creating arterio-venous trees.ipynb  Tree.cco  stage_2.cco
Post-Processing/Geometrical-Analysis/: BranchingOrder.py  HortonStrahlerOrderForOneTree.py  VBC.py  makePlots.py  utils.py
Post-Processing/Global-Metrics/: GlobalMetrics.py  utils.py  utilsPlot.py
Post-Processing/Image-Analysis/: ComputeMetricsFromPng.py  CreatePNG.py  FractalDimension.py  FractalDimensionForParaviewScreenShot.py  IntercapillaryArea.py  LocalFractalDimension.py  utils.py
Post-Processing/InFlightWork/: 20TerminalVessels.cco  20TerminalVessels.vtp  AV-tree.ipynb  Patient1_0.cco  Patient1_0.vtp
Post-Processing/ParaviewStates/: ClippedData.pvsm  CompareWithOCTA.pvsm  Cylinder&Clipped.pvsm  radius_state.pvsm
Results-8-patients/: Analyse-Simulations.ipynb  Data_FlowVSDiameter.csv
Results50Sims/: sim1.cco  sim1.conf  sim1.vtp  sim10.cco  sim10.vtp  sim10_root.vtp  sim11.cco  sim11.vtp  sim11_root.vtp  sim12.cco  sim12.vtp  sim12_root.vtp  sim13.cco  sim13.vtp  sim13_root.vtp  sim14.cco  sim14.vtp  sim14_root.vtp  sim15.cco  sim15.vtp  sim15_root.vtp  sim16.cco  sim16.vtp  sim16_root.vtp  sim17.cco  sim17.vtp  sim17_root.vtp  sim18.cco  sim18.vtp  sim18_root.vtp  sim19.cco  sim19.vtp  sim19_root.vtp  sim1_root.vtp  sim2.cco  sim2.vtp  sim20.cco  sim20.vtp  sim20_root.vtp  sim21.cco  (+111 more)
Results50SimsMoreVessels/: sim1.cco  sim1.conf  sim10.cco  sim10.vtp  sim11.cco  sim11.vtp  sim12.cco  sim12.vtp  sim13.cco  sim13.vtp  sim14.vtp  sim15.cco  sim15.vtp  sim16.cco  sim16.vtp  sim17.vtp  sim18.cco  sim18.vtp  sim19.cco  sim19.vtp  sim2.cco  sim20.cco  sim20.vtp  sim21.cco  sim21.vtp  sim22.cco  sim22.vtp  sim23.cco  sim23.vtp  sim24.cco  sim24.vtp  sim25.cco  sim25.vtp  sim26.vtp  sim27.cco  sim27.vtp  sim28.cco  sim28.vtp  sim29.cco  sim29.vtp  (+47 more)
Results50SimsWithGamma3/: sim1.cco  sim1.vtp  sim10.cco  sim10.vtp  sim11.cco  sim11.vtp  sim12.cco  sim12.vtp  sim13.cco  sim13.vtp  sim14.cco  sim14.vtp  sim15.cco  sim15.vtp  sim16.cco  sim16.vtp  sim17.cco  sim17.vtp  sim18.cco  sim18.vtp  sim19.cco  sim19.vtp  sim2.cco  sim2.vtp  sim20.cco  sim20.vtp  sim21.cco  sim21.vtp  sim22.cco  sim22.vtp  sim23.cco  sim23.vtp  sim24.cco  sim24.vtp  sim25.cco  sim25.vtp  sim26.cco  sim26.vtp  sim27.cco  sim27.vtp  (+60 more)
WholeRetina/Data/: Branching.csv  CFD_Liu_2008.csv  Data_VelocityVSFlow.csv  Diameter-vs-Order.csv  FirstAndSecondOrder_originalTable.csv  Flow-vs-Diameter.csv  HaemodynamicsFirstAndSecondOrder.csv  TotalRetinalBloodFlow.csv  Viscosity-vs-ShearRate.csv  (+1 more)
WholeRetina/src/: 2DRetina.cpp  3DSCP.cpp  CMakeLists.txt  CRA.cco  FoveaCenteredCRA.cco  Macula.cpp  Working2DRetina.cpp  dcco_WholeRetina_SVP.cpp  rootVessel.cco
WholeRetina/src/ConfigFiles/: Baseline.conf  Macula.conf  tmp.conf
WholeRetina/src/base_trees/: SegmentedArcades_0.cco  SegmentedArcades_1.cco  SegmentedArcades_10.cco  SegmentedArcades_11.cco  SegmentedArcades_12.cco  SegmentedArcades_2.cco  SegmentedArcades_3.cco  SegmentedArcades_4.cco  SegmentedArcades_5.cco  SegmentedArcades_6.cco  SegmentedArcades_7.cco  SegmentedArcades_8.cco  SegmentedArcades_9.cco
WholeRetina/vtkFiles/src/: CMakeLists.txt  FAZ.geo  Retina.geo  RetinaHull.geo  RetinaNVR.geo  WholeRetinaSVP.cxx
WholeRetina/vtkFiles/src/2D/: 2DRetina.geo  FAZ.geo  Macula.geo  Macula_omega1.geo  Macula_omega2.geo
perfused_geometries/: ExtractFinalResultsFromStagedGrowth.py
utils/: FractalDimension.py
virtual_angiogenesis/: 10Simulations3500-200.sh  CMakeLists.txt  README.md  SingleStageGrowth.cpp  computeICD.cpp  dcco_svp.cpp
virtual_angiogenesis/ConfigFiles/: Baseline.conf  SingleStageGrowth.conf
virtual_angiogenesis/MultiStageWithResetOfDlim/: Baseline.conf  dcco_svp.cpp
virtual_angiogenesis/MultiStageWithResetOfDlim/Python/: Vessel1.csv  Vessel2.csv  Vessel3.csv  Vessel8.csv  WriteCCOFile.py  utils.py
virtual_angiogenesis/Results/: sim1.vtp  sim14.cco  sim17.cco  sim2.vtp  sim26.cco  sim3.vtp  sim31.cco  sim33.vtp  sim4.vtp  sim40.cco  sim40.vtp  sim41.vtp  sim45.vtp  sim7.cco
vtk_scripts/: CMakeLists.txt  IntercapillaryDistance.cpp  IntercapillaryDistance.h  PolyDataToImageData.cxx
(+109 files in other folders)
